<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <View
        android:id="@+id/topView"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_launcher_foreground"
        app:civ_border_color="@color/colorWhite"
        app:civ_border_width="1dp"
        android:contentDescription="@string/app_title"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="65dp"
        android:fontFamily="sans-serif"
        android:text="@string/app_title"
        android:textColor="@color/colorWhite"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageLogo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/topView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/design_round_border"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/input_name"
        android:inputType="textCapWords"
        android:maxLength="60"
        android:paddingTop="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="10dp"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topView" />

    <EditText
        android:id="@+id/inputContact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/design_round_border"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/input_contact"
        android:inputType="number"
        android:maxLength="11"
        android:paddingTop="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="10dp"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName" />

    <EditText
        android:id="@+id/inputUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/design_round_border"
        android:drawableStart="@drawable/ic_usercode"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/input_user"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:paddingTop="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="10dp"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputContact" />

    <EditText
        android:id="@+id/inputPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/design_round_border"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/input_pass"
        android:inputType="textPassword"
        android:maxLength="20"
        android:paddingTop="10dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="10dp"
        android:fontFamily="sans-serif"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUser" />

    <include
        android:id="@+id/progressWait"
        layout="@layout/layout_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPass" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/design_round_highlight_text_blue"
        android:clickable="true"
        android:fontFamily="sans-serif"
        android:paddingLeft="16dp"
        android:paddingTop="6dp"
        android:paddingRight="16dp"
        android:paddingBottom="6dp"
        android:text="@string/user_login_now"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:padding="3dp"
        android:text="@string/input_hint"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/inputPass"
        app:layout_constraintEnd_toEndOf="@+id/inputPass"
        app:layout_constraintTop_toTopOf="@+id/inputPass" />

</androidx.constraintlayout.widget.ConstraintLayout>